@@ -88,6 +88,10 @@ a:hover {
     background-color:#C1DC70;
 }
 
+.barwarn {
+    background-color:#DC8B70;
+}
+
 .even {
     background:#EBE8DA;
 }
